cmake_minimum_required(VERSION 3.0.0)
project(rocketmq_client VERSION 0.1.0)
add_definitions(-DWIN32)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
if (WIN32)
    find_package(OpenSSL COMPONENTS)
    if (OPENSSL_FOUND)
        include_directories(${OPENSSL_INCLUDE_DIR})
        message(STATUS "** OpenSSL Include dir: ${OPENSSL_INCLUDE_DIR}")
        message(STATUS "** OpenSSL Libraries: ${OPENSSL_LIBRARIES}")
    endif ()
endif()
if (WIN32)
    find_package(Boost COMPONENTS)
    if (Boost_FOUND)
        message(STATUS "** Boost Include dir: ${Boost_INCLUDE_DIRS}")
        message(STATUS "** Boost Libraries dir: ${Boost_LIBRARY_DIRS}")
        message(STATUS "** Boost Libraries: ${Boost_LIBRARIES}")
        include_directories(${Boost_INCLUDE_DIRS})
    endif ()
endif()
add_subdirectory(src librocketmq)